@@ -380,9 +380,6 @@ namespace Rivet {
     const YODA::Scatter2D & referenceData(size_t datasetId,
 				    size_t xAxisId, size_t yAxisId) const;
 
-    /// Get bin edges with logarithmic widths
-    BinEdges logBinEdges(size_t nbins, double lower, double upper);
-
     /// Book a 1D histogram with @a nbins uniformly distributed across the range @a lower - @a upper .
     /// (NB. this returns a pointer rather than a reference since it will
     /// have to be stored in the analysis class - there's no point in forcing users to explicitly
