@@ -28,15 +28,14 @@ namespace Rivet {
       // addProjection(ChargedFinalState(-5.0, 5.0, 500*MeV), "CFS");
 
       // Histograms
-      _histPdfX = bookHisto1D("PdfX", logspace(0.000001, 1.0, 50));
-      _histPdfXmin = bookHisto1D("PdfXmin", logspace(0.000001, 1.0, 50));
-      _histPdfXmax = bookHisto1D("PdfXmax", logspace(0.000001, 1.0, 50));
+      _histPdfX = bookHisto1D("PdfX", logspace(50, 0.000001, 1.0));
+      _histPdfXmin = bookHisto1D("PdfXmin", logspace(50, 0.000001, 1.0));
+      _histPdfXmax = bookHisto1D("PdfXmax", logspace(50, 0.000001, 1.0));
       _histPdfQ = bookHisto1D("PdfQ", 50, 0.0, 30.0);
-      // _histPdfXQ = bookHisto2D("PdfXQ", logspace(0.000001, 1.0, 50), linspace(0.0, 30.0, 50));
-      // _histPdfTrackptVsX = bookProfile1D("PdfTrackptVsX", logspace(0.000001, 1.0, 50));
+      // _histPdfXQ = bookHisto2D("PdfXQ", logspace(50, 0.000001, 1.0), linspace(50, 0.0, 30.0));
+      // _histPdfTrackptVsX = bookProfile1D("PdfTrackptVsX", logspace(50, 0.000001, 1.0));
       // _histPdfTrackptVsQ = bookProfile1D("PdfTrackptVsQ", 50, 0.0, 30.0);
     }
-
 
 
     /// Perform the per-event analysis
