@@ -40,7 +40,7 @@ namespace Rivet {
       FastJets jetpro(vfs, FastJets::KT, 0.7);
       addProjection(jetpro, "Jets");
 
-      _h_photon_pT = bookHisto1D("photon_pT", logBinEdges(50, 30.0, 0.5*sqrtS()));
+      _h_photon_pT = bookHisto1D("photon_pT", logspace(50, 30.0, 0.5*sqrtS()));
       _h_photon_pT_lin = bookHisto1D("photon_pT_lin", 50, 0.0, 70.0);
       _h_photon_y = bookHisto1D("photon_y", 50, -5.0, 5.0);
       _h_photon_jet1_deta = bookHisto1D("photon_jet1_deta", 50, -5.0, 5.0);
