@@ -32,15 +32,15 @@ namespace Rivet {
       addProjection(jetpro, "Jets");
 
       _h_W_mass = bookHisto1D("W_mass", 50, 55.0, 105.0);
-      _h_W_pT = bookHisto1D("W_pT", logBinEdges(100, 1.0, 0.5*sqrtS()));
+      _h_W_pT = bookHisto1D("W_pT", logspace(100, 1.0, 0.5*sqrtS()));
       _h_W_pT_peak = bookHisto1D("W_pT_peak", 25, 0.0, 125.0);
       _h_W_y = bookHisto1D("W_y", 40, -4.0, 4.0);
       _h_W_phi = bookHisto1D("W_phi", 25, 0.0, TWOPI);
       _h_W_jet1_deta = bookHisto1D("W_jet1_deta", 50, -5.0, 5.0);
       _h_W_jet1_dR = bookHisto1D("W_jet1_dR", 25, 0.5, 7.0);
-      _h_Wplus_pT = bookHisto1D("Wplus_pT", logBinEdges(25, 10.0, 0.5*sqrtS()));
-      _h_Wminus_pT = bookHisto1D("Wminus_pT", logBinEdges(25, 10.0, 0.5*sqrtS()));
-      _h_lepton_pT = bookHisto1D("lepton_pT", logBinEdges(100, 10.0, 0.25*sqrtS()));
+      _h_Wplus_pT = bookHisto1D("Wplus_pT", logspace(25, 10.0, 0.5*sqrtS()));
+      _h_Wminus_pT = bookHisto1D("Wminus_pT", logspace(25, 10.0, 0.5*sqrtS()));
+      _h_lepton_pT = bookHisto1D("lepton_pT", logspace(100, 10.0, 0.25*sqrtS()));
       _h_lepton_eta = bookHisto1D("lepton_eta", 40, -4.0, 4.0);
       _htmp_dsigminus_deta = bookHisto1D("lepton_dsigminus_deta", 20, 0.0, 4.0);
       _htmp_dsigplus_deta  = bookHisto1D("lepton_dsigplus_deta", 20, 0.0, 4.0);
