@@ -1,7 +1,12 @@
 2012-11-14  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Converting the argument order of logspace, clarifying the
+	arguments, updating affected code, and removing Analysis::logBinEdges.
+
+	* Merging updates from the AIDA maintenance branch up to r3974
+
 	* Merging updates from the AIDA maintenance branch up to r4002
-	(latest revision for next merges is r4009).
+	 (latest revision for next merges is r4009).
 
 2012-11-11  Andy Buckley  <andy.buckley@cern.ch>
 
